<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_preferences"
        android:icon="@drawable/icons8_checklist_filled_50"
        android:title="@string/preferences" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/icons8_detective_64"
        android:title="@string/search" />
    <item

        android:id="@+id/navigation_Bar"
        android:icon="@drawable/icons8_barcode_scanner_50"
        android:title="@string/barcode" />
    <item
        android:id="@+id/navigation_Favorites"
        android:icon="@drawable/icons8_heart_48"
        android:title="@string/favorites" />


    <item
        android:id="@+id/navigation_History"
        android:icon="@drawable/icons8_time_machine_80"
        android:title="@string/history" />


</menu>
